# DX11

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  GenerateSysInfoReport.bat  GenerateSysInfoReport.txt  README.md  ReadMe.md  cmake_install.cmake  imgui.ini  project.sln
engine/: CMakeLists.txt  cmake_install.cmake  engine.vcxproj  engine.vcxproj.filters
engine/DirectX 11/: EngineDX.cpp  EngineDX.h
engine/DirectX 11/render/: D3D.cpp  D3D.h  SceneDX.cpp  SceneDX.h
engine/DirectX 11/shaders/: pixelShader.hlsl  vertexShader.hlsl
engine/DirectX 11/source/: Camera.h  ConstBuffer.h  ConstBufferType.h  Renderer.h  Vertex.h  VertexType.h
engine/DirectX 11/source/Buffer/: Buffer.h  ConstantBuffer.h  DepthStencilBuffer.h  VertexBuffer.h
engine/DirectX 11/source/Controller/: BufferManager.h  ModelManager.cpp  ModelManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.h
engine/DirectX 11/source/D3D/: D3D.cpp  D3D.h
engine/DirectX 11/source/Math/Colision/: MeshTriangleOctreeDX.cpp  MeshTriangleOctreeDX.h  ModelTriangleOctreeDX.cpp  ModelTriangleOctreeDX.h  TriangleOctreeDX.cpp  TriangleOctreeDX.h  boxDX.cpp
engine/DirectX 11/source/Math/Movement/: MeshMover.h
engine/DirectX 11/source/MeshSystem/: Mesh.cpp  Mesh.h  MeshSystem.cpp  MeshSystem.h  Model.h  OpaqueInstances.cpp  OpaqueInstances.h
engine/DirectX 11/source/Shader/: DomainShader.h  GeometryShader.h  HullShader.h  PixelShader.h  Shader.h  VertexShader.h
engine/DirectX 11/source/Texture/: SampleState.h  Texture2D.h
engine/DirectX 11/source/Utils/: Camera.cpp  Camera.h
engine/DirectX 11/window/: WindowDX.cpp  WindowDX.h
engine/Ray Casting/render/: Camera.h  CameraRC.h  ScenePlane.h  SceneRC.cpp  SceneRC.h  SceneSphere.h
engine/Ray Casting/source/material/: coloredDirectionLightRC.h  coloredMeshRC.h  coloredPlane.h  coloredPlaneRC.h  coloredPointLightRC.h  coloredSphereRC.h  coloredSpotLightRC.h  coloredTriangleRC.h  material.h  materialRC.h
engine/Ray Casting/source/math/: boxRC.cpp  boxRC.h  directionalLight.h  directionalLightRC.h  intersection.h  intersectionRC.h  meshRC.cpp  meshRC.h  plane.h  planeRC.cpp  planeRC.h  pointLightRC.h  ray.h  rayRC.cpp  rayRC.h  sphere.cpp  sphere.h  sphereRC.cpp  sphereRC.h  spotLightRC.h  triangleRC.cpp  triangleRC.h
engine/Ray Casting/utils/: Camera.h
engine/Ray Casting/utils/BVH/: TriangleOctreeRC.cpp  TriangleOctreeRC.h
engine/Ray Casting/utils/Dragger/: IObjectMoverRC.h  MeshMoverRC.h  PlaneMoverRC.h  SphereMoverRC.h  TriangleMoverRC.h
engine/Ray Casting/utils/parallel/: parallel_executorRC.cpp  parallel_executorRC.h
engine/Ray Casting/utils/timer/: FPSTimerRC.cpp  FPSTimerRC.h
engine/Ray Casting/window/: WindowRC.cpp  WindowRC.h
engine/Ray Casting/windows/: Window.cpp  Window.h  WindowRC.cpp  WindowRC.h
engine/fetchcontent/glm-subbuild/: CMakeLists.txt  cmake_install.cmake
engine/fetchcontent/glm-subbuild/glm-populate-prefix/tmp/: glm-populate-gitclone.cmake  glm-populate-gitupdate.cmake  glm-populate-mkdirs.cmake
engine/fetchcontent/imgui-subbuild/: CMakeLists.txt  cmake_install.cmake
engine/fetchcontent/imgui-subbuild/imgui-populate-prefix/tmp/: imgui-populate-gitclone.cmake  imgui-populate-gitupdate.cmake  imgui-populate-mkdirs.cmake
engine/general/: Camera.h
engine/general/dependencies/: init dependencies.bat
engine/general/resources/shaders/: colorPixelShader.hlsl  colorVertexShader.hlsl  hologramPixelShader.hlsl  hologramShader.hlsli  hologramVertexShader.hlsl  normalGeometryShader.hlsl  normalVertexShader.hlsl  normalVisualizerVertexShader.hlsl  pixelShader.hlsl  vertexShader.hlsl  vertexShaderold.hlsl
engine/general/utils/: Console.h
engine/general/utils/console/: Console.h
engine/general/utils/timer/: FPSTimerRC.cpp  FPSTimerRC.h
engine/render/: Camera.h  Scene.cpp  Scene.h  SceneObject.h
engine/source/material/: ColorLight.h  coloredCube.h  coloredDirectionLight.h  coloredMesh.h  coloredPlane.h  coloredPointLight.h  coloredSphere.h  coloredSpotLight.h  coloredTriangle.h  material.h
engine/source/math/: box.cpp  box.h  cube.cpp  cube.h  directionalLight.h  intersection.h  light.h  mesh.cpp  mesh.h  plane.cpp  plane.h  pointLight.h  ray.cpp  ray.h  sphere.cpp  sphere.h  spotLight.h  triangle.cpp  triangle.h  vec3.h
engine/src/DirectX 11/: EngineDX.cpp  EngineDX.h
engine/src/DirectX 11/source/: LightSystem.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  SolidVector.h  TransformSystem.h
engine/src/DirectX 11/source/Buffer/: Buffer.h  ConstantBuffer.h  DepthStencilBuffer.h  IndexBuffer.h  VertexBuffer.h
engine/src/DirectX 11/source/Controller/: BufferManager.cpp  BufferManager.h  ImGuiManager.cpp  ImGuiManager.h  ModelManager.cpp  ModelManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.h
engine/src/DirectX 11/source/D3D/: D3D.cpp
engine/src/DirectX 11/source/Light/: LightSystem.cpp  LightSystem.h
engine/src/DirectX 11/source/MeshSystem/: Mesh.cpp  Mesh.h  MeshSystem.cpp  MeshSystem.h  Model.cpp  Model.h  OpaqueInstances.cpp  OpaqueInstances.h
engine/src/DirectX 11/source/ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
engine/src/DirectX 11/source/Render/: DeferredShading.h  Renderer.cpp  Renderer.h
engine/src/DirectX 11/window/: WindowDX.cpp  WindowDX.h
engine/src/Ray Casting/render/: SceneRC.cpp  SceneRC.h
engine/src/Ray Casting/utils/: Camera.h
engine/src/Ray Casting/window/: WindowRC.cpp
engine/src/general/include/: SimpleMathToHLSL.h  win.h  win_def.h  win_undef.h
engine/utils/BVH/: TriangleOctree.cpp  TriangleOctree.h
engine/utils/Dragger/: CubeMover.h  IObjectMover.h  MeshMover.h  PlaneMover.h  SphereMover.h  TriangleMover.h
engine/utils/parallel/: parallel_executor.cpp  parallel_executor.h
engine/utils/timer/: FPSTimer.cpp  FPSTimer.h
engine/windows/: Window.cpp  Window.h
project/: CMakeLists.txt  cmake_install.cmake  project.vcxproj  project.vcxproj.filters  vertexShader.hlsl
project/source/: Application.cpp  Application.h  ApplicationDX.cpp  ApplicationDX.h  ApplicationRC.cpp  ApplicationRC.h  Resource.h  main.cpp
(+227 files in other folders)
